EventQL v0.4.1 beta;

  * Fixed a potential modulo by zero errror in server allocator


EventQL v0.4.0 (v0.4.0-rc0, git267e851) beta; 2016-12-20 13:43:47 +0000

  * Changed the parallel GROUP BY operation to use the new native protocol and
    to schedule all remote partial group bys from a a single thread using
    asynchronous I/O (currently via poll()).

  * Changed the evql client to use the new native protocol

  * Changed the connection acceptor code to read the first byte of an incoming
    connection and switch protocols (currently HTTP and native) based on this
    first byte

  * Changed the http server code to execute incoming requests from within a
    database thread (previously this was a generic thread pool)

  * Changed the internal cluster auth to require all internal hosts to be
    whitelisted using the cluster.allowed_hosts option. In standalone mode,
    the whitelist is defaulted to 0.0.0.0/0

  * Changed the HTTP transport to run fully within the database thread (i.e.
    removed the dependency on an external event loop) and added http timeouts

  * Changed the SQL engine to use the new native transport

  * Changed the zookeeper backend to explicitly reconnect on session timeouts
    and not rely on the built-in reconnect mechanism

  * Changed the DESCRIBE TABLE statement to return a new "encoding" column that
    contains information about the column's encoding settings

  * Changed the server allocator to assign new partitions to servers using
    a weighted random scheme, taking into a account the load facotr and the
    number of available bytes on disk for each server

  * Changed all metadata operations to use the native protocol

  * Removed the obsolete "sha1_tokens" field from the cluster/server config

  * Removed the PCRE dependency

  * Added a native transport layer (a framed TCP-based protocol). See
    doc/internals/protocol.txt for the specification

  * Added a c client driver library (libevqlclient)
