@@ -110,8 +110,13 @@ enum {
   EVQL_QUERY_RESULT_PENDINGSTMT  = 0x8
 };
 
-enum {
-  EVQL_INSERT_CTYPE_JSON   = 0x01
+enum  {
+  EVQL_INSERT_HAS_ENCODING_INFO = 0x01
+};
+
+enum EVQL_INSERT_CTYPE {
+  EVQL_INSERT_CTYPE_JSON   = 0x01,
+  EVQL_INSERT_CTYPE_CSV    = 0x02
 };
 
 enum {
