@@ -2,6 +2,10 @@ EventQL v0.4.1 beta;
 
   * Fixed a potential modulo by zero errror in server allocator
 
+  * Add support for INSERT frames with CSV encoding in the protocol
+
+  * Added --format flag and CSV support to evqlctl-table-import
+
 
 EventQL v0.4.0 (v0.4.0-rc0, git267e851) beta; 2016-12-20 13:43:47 +0000
 
